# autopilot-mkt-backend

./: .dockerignore  .env.example  .gcloudignore  .gitignore  =5.0.0  CLAUDE.md  Dockerfile  README.md  autopilot-mkt-backend.code-workspace  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/specs/: HANDOFF.md  TESTING_HANDOFF.md
.claude/steering/: product.md  structure.md  tech.md
docs/: extraction-frequency-optimization.md  supabase-secret-key-architecture.md
knowledge/: _raw_discovery_extractions.json  _raw_greenlight_extractions.json  buying_signals.json  closing_triggers.json  objection_responses.json  objections_discovery.json  pain_points.json  personas.json  pricing_insights.json  questions_asked.json  roi_examples.json
scripts/: deploy-cloud-run.sh  dev-server.sh  extract_call_knowledge.py  index_products.py  setup-secrets.sh  sync_stripe_products.py  upload_robot_images.py  validate_robot_images.py
src/: __init__.py  main.py
src/api/: __init__.py  deps.py
src/core/: __init__.py  config.py  openai.py  pinecone.py  rate_limiter.py  stripe.py  supabase.py  token_budget.py
src/models/: __init__.py  company.py  conversation.py  discovery_profile.py  message.py  order.py  product.py  profile.py  robot.py  session.py
src/schemas/: auth.py  checkout.py  common.py  company.py  conversation.py  discovery.py  floor_plan.py  message.py  product.py  profile.py  robot.py  roi.py  session.py
src/services/: __init__.py  agent_service.py  auth_service.py  checkout_service.py  company_service.py  conversation_service.py  discovery_profile_service.py  email_service.py  extraction_constants.py  floor_plan_prompts.py  floor_plan_service.py  invitation_service.py  product_service.py  profile_extraction_service.py  profile_service.py  rag_service.py  recommendation_cache.py  recommendation_prompts.py  recommendation_service.py  robot_catalog_service.py  roi_service.py  sales_knowledge_service.py  session_service.py
supabase/.temp/: pooler-url  project-ref
tests/: __init__.py  conftest.py
(+91 files in other folders)
